force-app/main/default/objects/Instructor__c/fields/Building_Address__c.field-meta.xml
<CustomField>
    <fullName>Building_Address__c</fullName>
    <label>Building Address</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>