force-app/main/default/objects/Instructor__c/fields/Office_Number__c.field-meta.xml
<CustomField>
    <fullName>Office_Number__c</fullName>
    <label>Office Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>