force-app/main/default/objects/Instructor__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <inlineHelpText>The number for your phone</inlineHelpText>
    <label>Phone Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>